# agent

./: main.py  model.py  pyproject.toml  tools.py  weather.py
src/email_assistant/: email_assistant.py  email_assistant_hitl.py  email_assistant_hitl_memory.py  prompts.py  schemas.py
src/email_assistant/tools/: base.py
src/email_assistant/tools/default/: calendar_tools.py  email_tools.py  prompt_templates.py
src/email_assistant/tools/gmail/: gmail_tools.py  setup_gmail.py
